--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -38,10 +38,14 @@ jobs:
           filename: verify-files-all.json
           install: false
 
-      - name: Test json-path
+      - name: Test upload-artifact1
         run: |
           [ "${{ steps.upload-artifact1.outputs.json-path }}" = "$RUNNER_TEMP/verify-files.json" ]
+      - name: Test upload-artifact2
+        run: |
           [ "${{ steps.upload-artifact2.outputs.json-path }}" = "$RUNNER_TEMP/verify-files.json" ]
+      - name: Test upload-artifact-all
+        run: |
           [ "${{ steps.upload-artifact-all.outputs.json-path }}" = "$RUNNER_TEMP/verify-files-all.json" ]
 
       - name: Download artifact
