--- a/action.yml
+++ b/action.yml
@@ -5,6 +5,10 @@ branding:
   color: blue
   icon: target
 inputs:
+  output-path:
+    description: "The file path of oj-resolve result json."
+    required: true
+    default: ${{runner.temp}}/verify-files.json
   include:
     description: "Argument of oj-resolve --include."
     required: false
@@ -13,10 +17,6 @@ inputs:
     description: "Argument of oj-resolve --exclude."
     required: false
     default: ""
-  verify-files-path:
-    description: "The file name of oj-resolve result json."
-    required: false
-    default: "./verify-files.json"
 outputs:
   json-path:
     description: "The path of verify files json."
@@ -28,10 +28,9 @@ runs:
       shell: bash
       id: resolve
       run: |
-        competitive-verifier oj-resolve --include $include --exclude $exclude > "$OUTPUT_FILE"
-        cat "$OUTPUT_FILE"
+        competitive-verifier oj-resolve --include $include --exclude $exclude | tee "$OUTPUT_FILE"
         echo "json-path=$OUTPUT_FILE" >> $GITHUB_OUTPUT
       env:
         include: ${{ inputs.include }}
         exclude: ${{ inputs.exclude }}
-        OUTPUT_FILE: ${{ inputs.verify-files-path }}
+        OUTPUT_FILE: ${{ inputs.output-path }}
